# obstacle-detection

./: .cproject  .cproject.bak  .gitignore  .gitmodules  .project  CMakeLists.txt  CONTRIBUTING.md  README.md  aux.py  camera_hardware.h  constant.py  corners.py  debiansetup.sh  horizon_detection.py  horizon_detection_runner.py  laplace_test.py  logWrite.py  main.py  man_hunt.py  man_hunt_tester.py  morph_test.py  requirements.txt
16to8/: 16to8.cpp  16to8.h  16to8.py  CMakeLists.txt  histo_eq.py  histo_rescale.py  run_16to8.py
Debug/: Debug.pro  Makefile  OA  makefile  objects.mk  sources.mk
Debug/img_proc/: subdir.mk
Debug/sandbox/: 16bitgray.d  DisplayImage.d  main.d  subdir.mk
Debug/test/: DisplayImage.d  main.d  subdir.mk
Filters/: BilateralFilter.cpp  BoundingBoxes.cpp  CMakeLists.txt  CannyEdges.cpp  LaplaceFilter.cpp  Makefile  ObstacleTrack.cpp  betterbouy.avi  betterbouy.mov
Play/: Makefile  OA  Play.pro  makefile
arek_lepton/: .gitignore  CMakeLists.txt  Lepton.cpp  Lepton.h  main.cpp
aux/: 16to8.cpp  16to8.py
config/: RTIMULib.ini  RTIMULib.ini.bak  RTIMULib.ini.calib
cv_prototyping/: auxiliary.py  horizon_detection_runner.py
horizon/: .gitignore  CMakeCache.txt  CMakeLists.txt  Horizon.cpp  Horizon.h  Horizon.hpp  HorizonGeometry  HorizonGeometry.cpp  Horizon_Test.cpp  Makefile  cmake_install.cmake  compile.sh  compile_test_horizon.sh  test_horizon.cpp
imu/: .gitignore  MadgwickAHRS.c  compile_stream.sh  compile_test.sh  horizon_finder.cpp  horizon_finder.h  imu.cpp  imu.h  imu_data.cpp  imu_data.h  imu_processor.cpp  imu_processor.h  output.txt  quaternion.cpp  quaternion.hpp  run_imu.py  sensor.cpp  sensor.py  serial.cpp  serial.h  test_imu_processor.cpp  test_imu_stream  test_imu_stream.cpp  test_madgwick  test_madgwick.cpp
lepton_img/: image.pgm  raspberry_pi_capture.h  test  test.cpp  test.h
lepton_video/: CMakeLists.txt  Lepton.cpp  Lepton.h  imu.cpp  main.cpp
lepton_video/info/: README
lib/: core_libs.cmake  device_libs.cmake  test_libs.cmake
lib/gtest/: Makefile  cmake_install.cmake
lib/leptonSDKEmb32PUB/: LEPTON_AGC.c
lib/protofiles/: CMakeLists.txt  README.md  index.js  package.json
lib/protofiles/messages/: currentdata.options  currentdata.proto  dangerzone.proto  gpscoordinate.proto  messages.proto  servermessage.proto  testingcommand.proto  testingcommandresponse.proto
lib/protofiles/scripts/: install_deps_debian.sh  install_deps_osx.sh
models/: model.svm
oa/: .cproject
oa/Debug/: Debug.pro  Makefile  makefile  objects.mk
oa/Play/: makefile
oa/sandbox/: 16bitgray.cpp  16bitgray.h  DisplayImage.h
oa/src/: Obstacle.cpp  detect_obstacles.h  obstacle_avoidance.cpp
oa/test/: all_tests.cpp
proto_py/: contours_detection_demo.py  horizon_detection.py  laplace_pyramid.py  mean_shift.py  morph_test.py
raspberrypi_capture/: a.out  compile.sh  raspberry_pi_capture.c  raspberry_pi_capture.c~  raspberry_pi_capture.h~  test.cpp~  test.h~
raspberrypi_video_edited/: .gitignore  CMakeLists.txt  LeptonThread.cpp  LeptonThread.cpp~  LeptonThread.h  LeptonThread.h~  config.cpp  config.h  notes.txt  out.avi  raspberrypi_video.pro  raspberrypi_video.pro~
resources/: 16bit.patch  res.cmake
resources/benchmarking/: model.svm
resources/config/: RTIMULib.ini  adavision-config-example.txt  adavision-config.txt  file-read.config  file-read.txt  master-example.config  prod-config.txt  production.config
resources/img/: freighterAndSun01.info
resources/imu/: sailboatTurnaround.txt
resources/models/: boat_large.svm  boat_medium.svm  boat_small.svm  chase-boat-large.svm  chase-boat-medium.svm  sailboat.svm  tanker-sideview.svm
rig/: CMakeLists.txt  main.cpp  rig_record.cpp
rpi_lepton_video/: button.py
rpi_lepton_video/info/: error.txt
rpi_lepton_video/src/: LeptonThread.cpp  LeptonThread.h  main.cpp
rpi_lepton_video_rewrite/: .gitignore  CMakeLists.txt  Imu.h  Lepton.cpp  Lepton.h  Lepton_I2C.cpp  main.cpp
sandbox/: DisplayImage.cpp  main.cpp
scripts/: README.md  adjust_imu_logfile.py  imu.txt  make_video.py  process_experiment.py  rescale.py  rescale_multiple.py  rig_record.py  run_rescaling.py  run_rig.py  shared.py  support.py  test_rig.py
scripts/build_scripts/: build_leptonSDK.sh  install_imglab.sh
scripts/labeler/: demo_metainfo_label.label  main.py
src/: Obstacle.cpp  Obstacle.h  detect_obstacles.cpp  src.cmake
src/display/: DesktopDisplay.cpp  DesktopDisplay.h  Display.cpp  Display.h  RoboPeakUSBDisplay.cpp  RoboPeakUSBDisplay.h
src/features/: Horizon.cpp  Horizon.h  SunImage.cpp  SunImage.h
src/geometry/: Horizon.cpp  Horizon.h  Line.cpp  Line.h
src/horizon/: Horizon.cpp  Horizon.h
src/imageProc/: EightBitWindowRescaler.cpp  EightBitWindowRescaler.h  HorizonMedialRescaler.cpp  HorizonMedialRescaler.h  HorizonModalRescaler.cpp  HorizonModalRescaler.h  HorizonRescaler.h  ModalRescaler.cpp  ModalRescaler.h  Rescaler.h  SimpleRescaler.cpp  SimpleRescaler.h
src/imageTypes/: Image16bit.cpp  Image16bit.h  Image8bit.cpp
src/img_proc/: HorizonFoundImg.cpp  HorizonFoundImg.h  HorizontalHorizon.cpp  HorizontalHorizon.h  VerticalHorizon.cpp  VerticalHorizon.h  horizon_finder.cpp  horizon_finder.h  hough_mod.cpp  img_proc.hpp
src/imu/: IMU.cpp  IMU.h  ParallelIMU.cpp  ParallelIMU.h
src/lepton/: Lepton.cpp  Lepton.h  LeptonI2C.cpp  LeptonSPI.cpp  LeptonSPI.h
src/main/: AdaVision.cpp  CameraEnclosureServer.cpp  HorizonEval.cpp  LiveFeed.cpp  LiveFeed.h  MainProgram.cpp  MainProgram.h  ObjectDetectionBenchmark.cpp  ObjectDetectionModelGenerator.cpp  ObjectDetectionRunner.cpp  RigRunner.h  (+6 more)
stress_test/: BoundingBoxes.cpp  CMakeLists.txt  ObstacleTrack.cpp
sunImage/: SunImage.cpp  SunImage.h  vmath.h
test/: HorizonFinder_test.cpp  ImageDisplayDriver.cpp  RunTests.cpp  RunTests.h  TestClass.h  TestRunner.cpp  WinTestRunner.cpp  moc_IMU.h  test.cmake
thermoscale/: .gitignore  README.txt  SelectedPoints.cpp  SelectedPoints.hpp  compile.sh  imageviewer.cpp  imageviewer.h  main.cpp  pixel_histo.py  run_pixel_histo.py  test_matplotlib.py  thermoscale.cpp  thermoscale.hpp  thermoscale2.cpp
(+460 files in other folders)
